--- a/frontend/src/Components/Categories.css
+++ b/frontend/src/Components/Categories.css
@@ -2,12 +2,16 @@
 
 
 .categories-container {
-    padding: 2rem;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 20px;
+    /*padding: 2rem;
+    text-align: center;*/
 }
   
 .categories-cards {
-    display: grid;
+    display: flex;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Responsivo */
     gap: 2rem;
     margin-top: 2rem;
